# MikuCode

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
benchmarks/smoke/parser_bug/: task.md
benchmarks/smoke/parser_bug/repo/: pyproject.toml
docs/superpowers/goals/: 2026-07-09-task-1-goal.md  2026-07-09-task-2-goal.md  2026-07-09-task-3-goal.md  2026-07-09-task-4-goal.md  2026-07-09-task-5-goal.md  2026-07-09-task-6-goal.md  2026-07-09-task-7-goal.md  2026-07-09-task-8-goal.md  2026-07-09-task-9-goal.md
docs/superpowers/plans/: 2026-07-07-mikucode-implementation.md
docs/superpowers/specs/: 2026-07-07-mikucode-design.md
src/mikucode/: config.py
src/mikucode/benchmark/: smoke.py
src/mikucode/cli/: display.py  factory.py  main.py  repl.py
src/mikucode/context/: builder.py  file_tree.py
src/mikucode/editing/: backup.py  diff.py  patch.py  undo.py
src/mikucode/memory/: store.py
src/mikucode/models/: base.py  mock.py  openai_compatible.py
src/mikucode/permissions/: policy.py  risk.py
src/mikucode/runtime/: actions.py  agent.py  events.py  state.py
src/mikucode/tools/: base.py  filesystem.py  registry.py  search.py  shell.py  testing.py
src/mikucode/tracing/: recorder.py  replay.py
src/mikucode/verification/: detector.py  report.py  runner.py
tests/: test_agent_runtime_loop.py  test_cli_init.py  test_cli_runtime_wiring.py  test_context_and_memory.py  test_load_env.py  test_patch_engine.py  test_runtime_schemas_and_tracing.py  test_shell_and_verification.py  test_tools_filesystem_search.py  test_trace_replay_and_benchmark.py
(+2 files in other folders)
